--- a/Main.ipynb
+++ b/Main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "699d164a",
+   "id": "7d19400b",
    "metadata": {},
    "source": [
     "# <center> IMAGE AND VIDEO PROCESSING WITH PYTHON <center>"
@@ -10,16 +10,34 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d99d7100",
+   "id": "16c33cac",
    "metadata": {},
    "source": [
     "### OpenCV: Stand for OPEN SOURCE COMPUTER VISION. Its can also be used in other programming languages."
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "38d18776",
+   "metadata": {},
+   "source": [
+    "##### Importing libraries"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "867f4bc2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "b3b5f32b",
    "metadata": {},
    "outputs": [
     {
@@ -36,18 +54,17 @@
     }
    ],
    "source": [
-    "import cv2"
+    "img = cv2.imread('galaxy.jpg')\n",
+    "gray_img = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3b5f32b",
+   "id": "0add8da7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "img = cv2.imread('galaxy.jpg')\n",
-    "gray_img = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
     "\n",
     "fig, ax = plt.subplots(ncols=2)\n",
     "\n",
