--- a/Main.ipynb
+++ b/Main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7d19400b",
+   "id": "8ed5adb1",
    "metadata": {},
    "source": [
     "# <center> IMAGE AND VIDEO PROCESSING WITH PYTHON <center>"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16c33cac",
+   "id": "67bdd9ae",
    "metadata": {},
    "source": [
     "### OpenCV: Stand for OPEN SOURCE COMPUTER VISION. Its can also be used in other programming languages."
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38d18776",
+   "id": "e6c03680",
    "metadata": {},
    "source": [
     "##### Importing libraries"
@@ -35,9 +35,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5b795ff7",
+   "metadata": {},
+   "source": [
+    "##### Reading Image file"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "b3b5f32b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img = cv2.imread('galaxy.jpg')\n",
+    "gray_img = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32fdee91",
+   "metadata": {},
+   "source": [
+    "##### Ploting Image with Graph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "fc01ce1e",
    "metadata": {},
    "outputs": [
     {
@@ -54,18 +81,6 @@
     }
    ],
    "source": [
-    "img = cv2.imread('galaxy.jpg')\n",
-    "gray_img = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0add8da7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
     "fig, ax = plt.subplots(ncols=2)\n",
     "\n",
     "ax[0].imshow(img[..., ::-1])  # BGR to RGB\n",
@@ -76,6 +91,14 @@
     "\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95c581a1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
