Saved img in new file

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa92ceb1",
+   "id": "6a26741a",
    "metadata": {},
    "source": [
     "###### Acctual Array/Image"
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f7b0b1dd",
+   "id": "baac8821",
    "metadata": {
     "scrolled": true
    },
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c217ab53",
+   "id": "7b45580b",
    "metadata": {},
    "source": [
     "##### Shape of the array is 2250 rows and 4000 cols"
@@ -136,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e8ace27f",
+   "id": "eedace7c",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed5a9c7e",
+   "id": "10169a01",
    "metadata": {},
    "source": [
     "# Now, reading Image in RGB "
@@ -162,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "696216ef",
+   "id": "f76258e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b54bbbd9",
+   "id": "9cf175b8",
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c53f7614",
+   "id": "943420ae",
    "metadata": {},
    "source": [
     "### TO SHOW THE IMAGE USE THIS COMMAND :"
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "3f2d09cb",
+   "id": "baa689ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10ad506e",
+   "id": "48a5cce0",
    "metadata": {},
    "source": [
     "##### The image is too big to be displayed on the screen to resize the image we use:"
@@ -265,8 +265,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "f1c25885",
+   "execution_count": 14,
+   "id": "bfe1f031",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,9 +277,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d150f572",
+   "metadata": {},
+   "source": [
+    "## PUT IMAGE HERE Galaxy_Fit"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ecdfddc",
+   "metadata": {},
+   "source": [
+    "#### Now lets save the resized image into a new file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "bb5bc8e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cv2.imwrite(\"Resized_image.jpg\",resized_img) # A new image file is created :D"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dea67070",
+   "id": "734cba9c",
    "metadata": {},
    "outputs": [],
    "source": []
